# ems-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  run.sh  vercel.json
backend/: config.py  influx.py  main.py  models.py
db/: init.sql
docs/: API_DOCUMENTATION_GAPS.md  SECURITY_AUDIT.md  SOURCEFUL_API_BLUEPRINT.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai-automation.ts  client.ts  dashboard-types.ts  data-service.ts  demo-data.ts  ems-client.ts  ems-types.ts  sel-client.ts  share-types.ts  sourceful-client.ts  sourceful.ts
frontend/src/auth/: PrivyProvider.tsx
frontend/src/components/: AuthButton.tsx  AutomationPanel.tsx  (+18 more)
src/: App.tsx  index.css  main.tsx
src/api/: ai-automation.ts  automation-types.ts  data-service.ts  demo-data.ts  ems-client.ts  ems-manager-client.ts  ems-manager-types.ts  sel-client.ts  sourceful-auth.ts  sourceful-client.ts  types.ts
src/auth/: PrivyProvider.tsx  useAuth.ts
src/components/: AnimatedPowerCard.tsx  AutomationPanel.tsx  BatteryCard.tsx  DashboardBuilder.tsx  DashboardLayout.tsx  DataQualityStats.tsx  EMSControlPanel.tsx  EMSPanel.tsx  EMSScheduleChart.tsx  EMSStatusCard.tsx  LoadCard.tsx  PVCard.tsx  PowerChart.tsx  SharePanel.tsx  SiteDashboard.tsx  UserSites.tsx
src/contexts/: DataContext.tsx
src/hooks/: useSELAuth.ts  useSourcefulAuth.ts
(+3 files in other folders)
