[project]
name = "ems-dashboard"
version = "0.1.0"
description = "EMS Dashboard for Sourceful Energy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "influxdb-client>=1.47.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dev = "uvicorn backend.main:app --reload --port 8000"
